// Copyright (c) HashiCorp, Inc.
// SPDX-License-Identifier: MPL-2.0

syntax = "proto3";

package hashicorp.consul.catalog.v2beta1;

import "pbresource/annotations.proto";

message Node {
  option (hashicorp.consul.resource.spec) = {scope: SCOPE_PARTITION};

  repeated NodeAddress addresses = 1;
}

message NodeAddress {
  // host can be an IP or DNS name.√ç
  string host = 1;

  // external indicates whether this address should be used for external communication
  // (aka a WAN address).
  bool external = 3;
}
